--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    z-index: 11;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 .menu {
     font: 10px/1 'Montserrat', sans-serif;
     letter-spacing: 1px;
     font-weight: 700;
     color: rgba(255, 255, 255, 1);
+    z-index: 5;
+    /*    position: fixed;*/
 }
 
 .background-img {
@@ -11,10 +29,11 @@
     width: 100%;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    padding-bottom: 200px;
 }
 
 .hero-content {
-
     padding-top: 200px;
     height: 100%;
     width: 100%;
@@ -37,6 +56,7 @@
     letter-spacing: 5px;
     text-transform: uppercase;
     margin: 0;
+    color:
 }
 
 .h1-lg {
@@ -44,7 +64,6 @@
     letter-spacing: .5px;
     text-transform: uppercase;
     /*    font-family: 'Righteous', cursive;*/
-
 }
 
 .mb10 {
@@ -60,6 +79,7 @@
 }
 
 .btn-hero {
+    font-size: 10.5px;
     background-color: rgba(190, 208, 148, 0.8);
     letter-spacing: 1.5px;
     color: #fff;
@@ -71,7 +91,96 @@
     margin: 5px;
 }
 
-.btn-hero {
+.btn-hero:hover {
     background-color: rgba(190, 208, 148, 0.4);
     color: #fff !important;
+}
+
+h5 {
+    font: 600 10px/1 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+    color: rgba(0, 0, 0, 0.85)
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: #aeaeae;
+}
+
+.A {
+    text-decoration: underline !important;
+    color: #aeaeae !important;
+}
+
+.story-text {
+    font: 300 20px/1.55em 'Nunito Sans', sans-serif;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.link {
+    font: 400 14px/1.6em 'Nunito Sans', sans-serif;
+    color: #aeaeae;
+}
+
+.h2-md {
+    letter-spacing: -1px;
+    font: 600 45px/1.2em 'Montserrat';
+}
+
+.bgcol {
+    background-color: #f2f4ec;
+}
+
+.bgC1 {
+    background-image: url(../images/bg-1.jpg);
+    height: 180px;
+    width: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: top;
+    transition: opacity .2s;
+}
+
+.card {
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, .07);
+    border: none;
+}
+
+.card:hover {
+    box-shadow: 0px 15px 50px rgba(0, 0, 0, .1);
+}
+
+.h3-md {
+    font: 600 22px/1.1em 'Montserrat', sans-serif;
+    letter-spacing: -.5px;
+}
+
+.h5-sm {
+    font: 400 15px/1.65em 'Nunito Sans', sans-serif;
+    /*    width: 70%;*/
+    /*    margin: auto;*/
+}
+
+.card-a {
+    text-decoration: none !important;
+    color: rgba(0, 0, 0, .85) !important;
+    font: 600 10px/1 'Montserrat', sans-serif;
+}
+
+.card-a:hover {
+    color: rgba(0, 0, 0, .5) !important;
+}
+
+.icon-png {
+    width: 100%;
+    height: 180px;
+}
+i{
+    font-size: 50px;
+    color: white;
 }
