--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ body {
     letter-spacing: 5px;
     text-transform: uppercase;
     margin: 0;
-    color:
 }
 
 .h1-lg {
@@ -176,11 +175,108 @@ a:hover {
     color: rgba(0, 0, 0, .5) !important;
 }
 
-.icon-png {
-    width: 100%;
-    height: 180px;
+.card-image {
+    display: table;
 }
-i{
+
+.fontaw {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.fontaw:hover {
+    transform: translateY(-5px);
+    transition: all;
+    transition-duration: .2s;
+}
+
+i {
     font-size: 50px;
     color: white;
+}
+
+.btn-ghost-black {
+    letter-spacing: 1px;
+    border-radius: 50px;
+    font: 600 10.5px/1 'Montserrat', sans-serif;
+    padding: 17px 37px 17px 37px;
+    border: 1px solid rgba(0, 0, 0, .15);
+    margin-top: 15px;
+    background-color: transparent;
+    transition: all .2s;
+}
+
+.btn-ghost-black:hover {
+    color: rgba(255, 255, 255, 1);
+    background-color: #000;
+    font-weight: 500;
+    transition: all;
+    transition-duration: .5s;
+}
+
+.get-in {
+    font: 400 14px/1.6em 'Nunito Sans', sans-serif;
+    color: #aeaeae;
+    margin: 0 0 10px;
+}
+
+.section-heading {
+    width: 100%;
+    position: relative;
+}
+
+.gellery-title {
+    font: 600 45px/1.2em 'Montserrat';
+    letter-spacing: -1px;
+}
+
+.sub-heading {
+    position: absolute;
+    margin: auto;
+    top: 47px;
+    left: 0;
+    font: 600 10px/1 'Montserrat', sans-serif;
+    right: 0;
+    letter-spacing: 1px;
+    color: rgba(0, 0, 0, .85);
+}
+
+.port-menu {
+    font: 600 10px/1 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+}
+
+.port-menu:hover {
+    color: rgba(0, 0, 0, .5);
+    transition: all .3s;
+}
+
+.item-caption {
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    position: absolute;
+    z-index: 2;
+    opacity: 0;
+}
+
+.item-caption:hover {
+    background-color: white;
+    transition: all;
+    transition-duration: .5s;
+    opacity: 1;
+}
+
+.item-desc {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+}
+
+.subheading {
+    font: 600 10px/1 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+    color: rgba(0, 0, 0, .85);
+    margin: 0;
+    padding: 0;
 }
