--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ body {
 
 .background-img {
     background-image: url(../images/bg-1.jpg);
+    /*
     height: 100%;
     width: 100%;
+    */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    padding-bottom: 200px;
+
 }
 
 .hero-content {
@@ -346,17 +348,150 @@ a:hover {
     font-weight: 400;
 }
 
+.team {
+    height: 330px;
+    width: 330px;
+    position: relative;
+}
+
+.team-description {
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: -20px;
+    right: 0;
+    background-color: white;
+    width: 90%;
+    height: 90%;
+    padding: 60px 0px 50px 0px;
+    opacity: 0;
+    z-index: 5;
+}
+
+.team-description:hover {
+    opacity: 1;
+    transition-duration: .5s;
+    transition-timing-function: ease-out;
+    transform: translate3d(12px, 0px, 0px);
+
+}
+
+.t-desc p {
+    font: 400 14px/1.6em 'Nunito Sans', sans-serif;
+}
+
+.t-link a {
+    font-size: 12px;
+    color: black;
+    transition: color .2s;
+    padding: 5px;
+}
+
+.t-link a:hover {
+    color: rgba(0, 0, 0, .5);
+}
+
+.team {
+    overflow: hidden;
+}
+
+.img {
+    transform: scale(1.2);
+    transition-duration: 5s;
+    overflow: hidden;
+}
+
+.count {
+    font: 700 65px/1.2em 'Montserrat';
+    letter-spacing: -1px;
+    color: white;
+}
+
+.count-p {
+    font: 400 14px/1.6em 'Nunito Sans', sans-serif;
+    color: white;
+}
+
+.bg-black {
+    background-color: #000;
+    padding: 80px 0px 80px 0px;
+}
+
+.review h5 {
+    letter-spacing: 3px;
+
+}
+
+.review-text {
+    line-height: 28px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.review-text h5 {
+    letter-spacing: 3px;
+}
+
+.social i {
+    font-size: 70px;
+}
+
+.social i:hover {
+    color: rgba(0, 0, 0, .5);
+}
+
+.flex-view {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bg-gray {
+    background-color: #f2f4ec;
+}
+
+
+.tabe i {
+    font-size: 30px;
+    padding: 20px;
+}
+
+
+
+.tabe p {
+    font: 400 12px/1 'Montserrat', sans-serif;
+    color: rgba(0, 0, 0, .85);
+}
+
+.line {
+    height: 50px;
+    width: 5px;
+    background-color: red;
+    border: 1px solid red;
+/*    margin-bottom: 50px;*/
+}
+
 @media only screen and (max-width:768px) {
-    .menu-ui {
+    .navbar {
         display: none;
     }
+
     .Bar-menu {
         display: block;
     }
+
     .h1-lg {
         font: 400 40px/1 'Peace Sans';
     }
+
     .shriker {
         display: block;
+    }
+
+    .team {
+        height: 100%;
+        width: 100%;
+        padding: 10px;
     }
 }
