--- a/css/style.css
+++ b/css/style.css
@@ -362,9 +362,9 @@ a:hover {
     background-color: white;
     width: 90%;
     height: 90%;
-    padding: 60px 0px 50px 0px;
+    padding: 25% 0px 0px 0px;
     opacity: 0;
-    z-index: 5;
+    z-index: 1;
 }
 
 .team-description:hover {
